[project]
name = "xserver-auto-renew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
]
